[gd_scene load_steps=10 format=3 uid="uid://bm8moysqd5ift"]

[ext_resource type="Texture2D" uid="uid://b071wk4h2dqvh" path="res://assets/bgs/bg_r_13.png" id="1_welhg"]
[ext_resource type="Script" path="res://Scripts/NewScene.gd" id="1_y14eo"]
[ext_resource type="Script" path="res://Scripts/BackScene.gd" id="2_17lrs"]
[ext_resource type="FontFile" uid="uid://bq3x0g6opxv7u" path="res://assets/fonts/MorrisRomanAlternate-Black.ttf" id="3_5yxsy"]
[ext_resource type="StyleBox" uid="uid://7pyavrmageb5" path="res://resources/navbar_enabled.tres" id="4_273iw"]
[ext_resource type="FontFile" uid="uid://dpghealcypu5y" path="res://assets/fonts/CaslonAntique.ttf" id="4_j15dw"]
[ext_resource type="Script" path="res://Scripts/SaveSlotContainer.gd" id="4_ng3jc"]
[ext_resource type="StyleBox" uid="uid://dix82pa27dcyp" path="res://resources/navbar_hover.tres" id="5_gfip4"]
[ext_resource type="Theme" uid="uid://df0hnq8k7t4jd" path="res://resources/defaulttext.tres" id="9_vwcyg"]

[node name="LoadSave" type="Node2D"]
script = ExtResource("1_y14eo")

[node name="BgR13" type="Sprite2D" parent="."]
position = Vector2(579, 325)
scale = Vector2(0.803309, 0.803309)
texture = ExtResource("1_welhg")

[node name="Load1" type="Button" parent="BgR13"]
offset_left = 333.62
offset_top = -288.805
offset_right = 683.62
offset_bottom = -219.805
theme_override_fonts/font = ExtResource("3_5yxsy")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("4_273iw")
theme_override_styles/hover = ExtResource("5_gfip4")
theme_override_styles/pressed = ExtResource("4_273iw")
text = "Load"

[node name="Slot1" type="Button" parent="."]
offset_left = 166.0
offset_top = 55.0
offset_right = 846.0
offset_bottom = 171.0
text = "Save slot 1"
script = ExtResource("4_ng3jc")

[node name="Rank" type="Label" parent="Slot1"]
visible = false
offset_left = 598.0
offset_top = 4.0
offset_right = 672.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Last save" type="Label" parent="Slot1"]
visible = false
offset_left = 405.0
offset_top = 79.0
offset_right = 676.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Player name" type="Label" parent="Slot1"]
visible = false
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30

[node name="Slot2" type="Button" parent="."]
offset_left = 165.0
offset_top = 209.0
offset_right = 845.0
offset_bottom = 325.0
text = "Save slot 2"
script = ExtResource("4_ng3jc")

[node name="Rank" type="Label" parent="Slot2"]
visible = false
offset_left = 598.0
offset_top = 4.0
offset_right = 672.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Last save" type="Label" parent="Slot2"]
visible = false
offset_left = 405.0
offset_top = 79.0
offset_right = 676.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Player name" type="Label" parent="Slot2"]
visible = false
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30

[node name="Slot3" type="Button" parent="."]
offset_left = 166.0
offset_top = 361.0
offset_right = 846.0
offset_bottom = 477.0
text = "Save slot 3"
script = ExtResource("4_ng3jc")

[node name="Rank" type="Label" parent="Slot3"]
visible = false
offset_left = 598.0
offset_top = 4.0
offset_right = 672.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Last save" type="Label" parent="Slot3"]
visible = false
offset_left = 405.0
offset_top = 79.0
offset_right = 676.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2

[node name="Player name" type="Label" parent="Slot3"]
visible = false
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 30

[node name="Back" type="Button" parent="."]
offset_left = 889.0
offset_top = 387.0
offset_right = 1096.0
offset_bottom = 456.0
text = "Back"
script = ExtResource("2_17lrs")

[node name="Save" type="Button" parent="."]
offset_left = 844.0
offset_top = 167.0
offset_right = 1134.0
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("3_5yxsy")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_273iw")
theme_override_styles/hover = ExtResource("5_gfip4")
theme_override_styles/pressed = ExtResource("4_273iw")
text = "Save"

[node name="Confirm" type="Button" parent="."]
offset_left = 845.0
offset_top = 236.0
offset_right = 1135.0
offset_bottom = 291.0
theme_override_fonts/font = ExtResource("3_5yxsy")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("4_273iw")
theme_override_styles/hover = ExtResource("5_gfip4")
theme_override_styles/pressed = ExtResource("4_273iw")
text = "Confirm"

[node name="save load text" type="Label" parent="."]
offset_left = 17.0
offset_top = 591.0
offset_right = 357.0
offset_bottom = 640.0
theme = ExtResource("9_vwcyg")
theme_override_fonts/font = ExtResource("4_j15dw")
theme_override_font_sizes/font_size = 40

[connection signal="pressed" from="BgR13/Load1" to="." method="_on_load_1_pressed"]
[connection signal="pressed" from="Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_comfirm_pressed"]
